[metadata]
name = data_processing
version = 0.0.1
description = Transformation functions and services for multi-modal oncology data
long_description = README.rst, CHANGELOG.rst, LICENSE
long_description_content_type='text/x-rst',
keywords = radiology, pathology, clinical
license = Apache License version 2.0
home_page: https://componcmsk.org/msk-mind/
author: msk-mind
author_email: CompOncBST@mskcc.org
classifiers =
    'Framework :: Flask',
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent'
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries :: Python Modules',

# lib can work off of a zip file
[options]
zip_safe = True
include_package_data = True

packages = find:

#[options.packages.find]
#where = .
#include =
#    data_processing/**
#    tests/**
#exclude =

# keep dependencies abstract and not specific to a particular version
install_requires =
    click
    decorator>=4.3,<5.0  # force constrain versions to avoid incompatibility with networkx requirements
    filehash
    joblib
    koalas
    medpy
    minio
    neo4j
    numpy>=1.9.0
    pandas>=1.1.0
    pyarrow>=3.0.0
    pyspark
    pytest
    pytest-cov
    pytest-mock
    pytest-runner
    scikit-image
    wheel>=0.22
    itk
    opencv-python
    openslide-python
    paramiko
    scp
    checksumdir
    pyinstaller>=4.0
    tornado>=6.0.4
    PyYAML>=5.4
    jsonpath-ng>=1.5.2
    yamale>=3.0.4
    pydicom>=2.1.0
    pyradiomics>=3.0.1
    flask_restx
    requests>=2.25.1
    Pillow>=8.1.1
    deltalake>=0.2.1
    testfixtures
    mock
    dirhash
    shapely
    seaborn
    ijson
    geojson
    orjson

[options.package_data]
* = *.dcm, *.svg, *.bmp, *.yaml, *.yml, *.parquet, *.crc, *.json, *.npy

#[options.extras_require]
#pdf = ReportLab>=1.2; RXP
#rest = docutils>=0.3; pack ==1.1, ==1.3

#[options.data_files]
#test_data = tests/data_processing/testdata/*

# paths to executables
[options.entry_points]
console_scripts =
    mrad_proxy = data_processing.radiology.proxy_table.generate:cli
    dsa = data_processing.pathology.cli.dsa.dsa_viz:cli

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
