[metadata]
name = pyluna-core
version = attr: __version__
description = Transformation functions and services for multi-modal oncology data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = radiology, pathology, clinical
license = Apache License version 2.0
home_page = https://componcmsk.org/msk-mind/
author = msk-mind
author_email = CompOncBST@mskcc.org
url = https://github.com/msk-mind/luna
project_urls =
	Bug Tracker = https://github.com/msk-mind/luna/issues
classifiers =
    Framework :: Pytest
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Artificial Intelligence

# lib can work off of a zip file
[options]
zip_safe = True
packages =
    find_namespace:

# keep dependencies abstract and not specific to a particular version
install_requires =
    pyluna-common
# to install from local package, specify the path after @. Example:
# pyluna-common @ file://localhost/absolute-path-to-luna-repo/pyluna-common/

[options.package_data]
* = *.dcm, *.svg, *.bmp, *.yaml, *.yml, *.parquet, *.crc, *.json, *.npy, tests*

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-mock
    pytest-runner
    testfixtures
    requests-mock
    mock
    wheel>=0.22
    pyinstaller>=4.0
    poetry
    python-semantic-release
    m2r2
    twine
    Sphinx

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[semantic_release]
version_variable = __init__.py:__version__
changelog_file = ../HISTORY.md
commit_parser = semantic_release.history.emoji_parser
commit_version_number = True
check_build_status = True
major_on_zero = False
## below configurations will be set when running `semantic-release publish`
upload_to_pypi = True
repository = pypitest
upload_to_release = False
